global using Google.Protobuf.WellKnownTypes;
global using Grpc.Core;
global using Makc2025.Dummy.Shared.DomainUseCases.Query;
global using Makc2025.Dummy.Shared.Infrastructure.Grpc;
global using Makc2025.Dummy.Writer.DomainUseCases.App.Actions.Login;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEvent.Actions.Create;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEvent.Actions.Delete;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEvent.Actions.Get;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEvent.Actions.GetList;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEvent.Actions.Update;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEvent.DTOs;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEventPayload.Actions.Create;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEventPayload.Actions.Delete;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEventPayload.Actions.Get;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEventPayload.Actions.GetList;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEventPayload.Actions.Update;
global using Makc2025.Dummy.Writer.DomainUseCases.AppEventPayload.DTOs;
global using Makc2025.Dummy.Writer.DomainUseCases.DummyItem.Actions.Create;
global using Makc2025.Dummy.Writer.DomainUseCases.DummyItem.Actions.Delete;
global using Makc2025.Dummy.Writer.DomainUseCases.DummyItem.Actions.Get;
global using Makc2025.Dummy.Writer.DomainUseCases.DummyItem.Actions.GetList;
global using Makc2025.Dummy.Writer.DomainUseCases.DummyItem.Actions.Update;
global using Makc2025.Dummy.Writer.DomainUseCases.DummyItem.DTOs;
global using MediatR;
global using Microsoft.Extensions.Configuration;
global using Makc2025.Dummy.Writer.Infrastructure.Grpc.AppEvent;
global using Makc2025.Dummy.Writer.Infrastructure.Grpc.AppEventPayload;
global using Makc2025.Dummy.Writer.Infrastructure.Grpc.DummyItem;
global using Microsoft.AspNetCore.Builder;
global using Microsoft.Extensions.DependencyInjection;
global using Microsoft.Extensions.Logging;
global using AppEventPayloadServiceBase = Makc2025.Dummy.Writer.Infrastructure.Grpc.AppEventPayload.AppEventPayload.AppEventPayloadBase;
global using AppEventServiceBase = Makc2025.Dummy.Writer.Infrastructure.Grpc.AppEvent.AppEvent.AppEventBase;
global using AppServiceBase = Makc2025.Dummy.Writer.Infrastructure.Grpc.App.App.AppBase;
global using DummyItemServiceBase = Makc2025.Dummy.Writer.Infrastructure.Grpc.DummyItem.DummyItem.DummyItemBase;
